<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>t2linux</groupId>
    <artifactId>iso</artifactId>
    <version>0.5-beta</version>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>iso.T2ISO</main.class>
        <app.name>T2ISO</app.name>
        <runtime.modules>java.base,java.desktop,jdk.crypto.ec</runtime.modules>
        <flatlaf.version>3.7</flatlaf.version>
    </properties>

    <build>
        <plugins>

            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>

            <!-- Fat JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${main.class}</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- jlink + jpackage -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>

                    <execution>
                        <id>runtime-and-package</id>
                        <phase>package</phase>
                        <configuration>
                            <target>

                                <delete dir="runtime" quiet="true"/>
                                <delete dir="runtime-min" quiet="true"/>
                                <delete dir="${app.name}" quiet="true"/>
                                <delete dir="${app.name}.app" quiet="true"/>
                                <delete dir="AppDir" quiet="true"/>
                                <!-- Build minimal runtime -->
                                <exec executable="jlink" failonerror="true">
                                    <arg value="--add-modules"/>
                                    <arg value="${runtime.modules}"/>

                                    <arg value="--strip-debug"/>
                                    <arg value="--strip-native-commands"/>
                                    <arg value="--no-header-files"/>
                                    <arg value="--no-man-pages"/>
                                    <arg value="--compress=2"/>

                                    <arg value="--output"/>
                                    <arg value="runtime-min"/>
                                </exec>

                                <!-- Package app -->
                                <exec executable="jpackage" failonerror="true">

                                    <arg value="--type"/>
                                    <arg value="app-image"/>

                                    <arg value="--name"/>
                                    <arg value="${app.name}"/>

                                    <arg value="--input"/>
                                    <arg value="${project.build.directory}"/>

                                    <arg value="--main-jar"/>
                                    <arg value="${project.build.finalName}.jar"/>

                                    <arg value="--main-class"/>
                                    <arg value="${main.class}"/>

                                    <arg value="--runtime-image"/>
                                    <arg value="runtime-min"/>

                                </exec>

                            </target>
                        </configuration>
                        <goals><goal>run</goal></goals>
                    </execution>

                </executions>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>${flatlaf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- Linux AppImage profile -->
    <profiles>
        <profile>
            <id>macos</id>
            <activation>
                <os><name>Mac OS X</name></os>
            </activation>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>macos-icon-copy</id>
                                <phase>package</phase>
                                <configuration>
                                    <target>
                                        <copy
                                                file="${project.basedir}/packaging/macos/icon.icns"
                                                tofile="${project.basedir}/${app.name}.app/Contents/Resources/${app.name}.icns"
                                                overwrite="true"/>
                                    </target>
                                </configuration>
                                <goals><goal>run</goal></goals>
                            </execution>
                            <execution>
                                <id>macos-zip-bundle</id>
                                <phase>package</phase>
                                <configuration>
                                    <target>
                                        <exec executable="codesign" failonerror="true">
                                            <arg value="--force"/>
                                            <arg value="--deep"/>
                                            <arg value="--sign"/>
                                            <arg value="-"/>
                                            <arg value="${app.name}.app"/>
                                        </exec>
                                        <exec executable="ditto" failonerror="true">
                                            <arg value="-c"/>
                                            <arg value="-k"/>
                                            <arg value="--sequesterRsrc"/>
                                            <arg value="--keepParent"/>
                                            <arg value="${app.name}.app"/>
                                            <arg value="t2iso_macos.zip"/>
                                        </exec>
                                    </target>
                                </configuration>
                                <goals><goal>run</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>linux</id>
            <activation>
                <os><name>Linux</name></os>
            </activation>

            <build>
                <plugins>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>

                            <execution>
                                <id>appimage</id>
                                <phase>package</phase>
                                <configuration>
                                    <target>

                                        <mkdir dir="AppDir"/>
                                        <copy todir="AppDir">
                                            <fileset dir="${app.name}"/>
                                        </copy>

                                        <echo file="AppDir/AppRun"><![CDATA[
#!/bin/sh
HERE="$(dirname "$(readlink -f "$0")")"
exec "$HERE/bin/${app.name}" "$@"
                                        ]]></echo>

                                        <chmod file="AppDir/AppRun" perm="755"/>
                                        <chmod file="AppDir/bin/T2ISO" perm="755"/>
                                        <copy todir="AppDir">
                                            <fileset dir="${project.basedir}/packaging/linux"/>
                                        </copy>

                                        <exec executable="appimagetool" failonerror="true">
                                            <env key="ARCH" value="x86_64"/>
                                            <arg value="AppDir"/>
                                        </exec>

                                    </target>
                                </configuration>
                                <goals><goal>run</goal></goals>
                            </execution>

                        </executions>
                    </plugin>

                </plugins>
            </build>

        </profile>
    </profiles>

</project>
